--- a/backend/watering/src/main/resources/application.yml
+++ b/backend/watering/src/main/resources/application.yml
@@ -6,3 +6,7 @@ spring:
     url: jdbc:mysql://${MYSQL_HOST:localhost}:3306/watering_system?serverTimezone=UTC
     username: watering
     password: watering
+jwt:
+  token: dkjJGSYt7gb476bZJHDG76tg42uyhb5437kLxdh9827,.ds.okpo78645KsjdSgt43[ery834bgds]
+  timeout: 3600
+  refresh-timeout: 604800
