--- a/backend/watering/pom.xml
+++ b/backend/watering/pom.xml
@@ -78,6 +78,11 @@
 			<artifactId>java-jwt</artifactId>
 			<version>3.10.2</version>
 		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>1.4.200</version>
+		</dependency>
 	</dependencies>
 
 	<build>
