--- a/backend/watering/src/main/resources/application.yml
+++ b/backend/watering/src/main/resources/application.yml
@@ -13,7 +13,7 @@ jwt:
 mqtt:
   broker-url: ws://13.76.221.132:8083
   client-id: watering
-  topic-filter: T_2, T_3
+  topic-filter: T_1, T_2, T_3, T_4
 
 ---
 
@@ -22,10 +22,5 @@ spring:
   datasource:
     url: jdbc:h2:mem:testdb
     driverClassName: org.h2.Driver
-    username: sa
-    password: sa
-
-#mqtt:
-#  broker-url: tcp://52.179.81.237:1883
-#  client-id: watering
-#  topic-filter: T
+mqtt:
+  broker-url: tcp://52.179.81.237:1883
