--- a/backend/watering/pom.xml
+++ b/backend/watering/pom.xml
@@ -100,6 +100,11 @@
 			<artifactId>spring-boot-configuration-processor</artifactId>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.integration</groupId>
+			<artifactId>spring-integration-mqtt</artifactId>
+			<version>5.3.0.RELEASE</version>
+		</dependency>
 	</dependencies>
 
 	<build>
