--- a/backend/watering/pom.xml
+++ b/backend/watering/pom.xml
@@ -111,7 +111,11 @@
 			<artifactId>validation-api</artifactId>
 			<version>2.0.1.Final</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-messaging</artifactId>
+			<version>5.3.1.RELEASE</version>
+		</dependency>
 	</dependencies>
 
 	<build>
