--- a/backend/watering/src/main/resources/application-development.yml
+++ b/backend/watering/src/main/resources/application-development.yml
@@ -9,5 +9,5 @@ spring:
       enabled: true
 mqtt:
   client-id: anhvan_watering
-  broker-url: tcp://13.76.250.158:1883
-  subscribe-topic: Topic/#
+  # broker-url: tcp://13.76.250.158:1883
+  # subscribe-topic: Topic/#
