--- a/backend/watering/src/main/resources/application.yml
+++ b/backend/watering/src/main/resources/application.yml
@@ -14,9 +14,9 @@ jwt:
   timeout: 3600
   refresh-timeout: 604800
 mqtt:
-  broker-url: tcp://52.187.125.59:1883
+  broker-url: tcp://168.63.137.21:1883
   client-id: watering_coder_team
   publish-topic: Topic/Speaker
   subscribe-topics: Topic/Mois, Topic/Speaker
-  username: BKvm
+  username: BKvm2
   password: Hcmut_CSE_2020
