--- a/backend/watering/src/main/resources/application-development.yml
+++ b/backend/watering/src/main/resources/application-development.yml
@@ -8,6 +8,6 @@ spring:
     console:
       enabled: true
 mqtt:
-  client-id: truclu
+  client-id: av
   # broker-url: tcp://13.76.250.158:1883
   # subscribe-topic: Topic/#
